--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,22 @@
 /* style.css */
+@font-face {
+  font-family: 'Quicksand';
+  src:local('Quicksand')
+      url('../src/fonts/Quicksand-Regular.woff') format('woff'),
+      url('../src/fonts/Quicksand-Regular.ttf'), format('truetype'),
+      url('../src/fonts/Quicksand-Regular.svg'), format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+	font-family: 'Montserrat';
+  src:local('Montserrat'),
+      url('../src/fonts/Montserrat-Regular.woff') format('woff'),
+      url('../src/fonts/Montserrat-Regular.ttf') format('truetype'),
+      url('../src/fonts/Montserrat-Regular.svg') format('svg');
+	font-weight: normal;
+  font-style: normal;
+}
+
 @import './blocks/ui-header/ui-header.scss';
 @import './blocks/input/input.scss';
