--- a/src/style.scss
+++ b/src/style.scss
@@ -1,22 +1,19 @@
-/* style.css */
-@font-face {
-  font-family: 'Quicksand';
-  src:local('Quicksand')
-      url('../src/fonts/Quicksand-Regular.woff') format('woff'),
-      url('../src/fonts/Quicksand-Regular.ttf'), format('truetype'),
-      url('../src/fonts/Quicksand-Regular.svg'), format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-	font-family: 'Montserrat';
-  src:local('Montserrat'),
-      url('../src/fonts/Montserrat-Regular.woff') format('woff'),
-      url('../src/fonts/Montserrat-Regular.ttf') format('truetype'),
-      url('../src/fonts/Montserrat-Regular.svg') format('svg');
-	font-weight: normal;
-  font-style: normal;
-}
+$dark_shade_100: rgba(31, 32, 65, 1);
+$dark_shade_075: rgba(31, 32, 65, 0.75);
+$dark_shade_050: rgba(31, 32, 65, 0.5);
+$dark_shade_025: rgba(31, 32, 65, 0.25);
+$dark_shade_005: rgba(31, 32, 65, 0.05);
+$purple: #bc9cff;
+$green: #6fcf97;
 
-@import './blocks/ui-header/ui-header.scss';
-@import './blocks/input/input.scss';
+// Fonts
+@import './common.blocks/fonts/quicksand/quicksand.scss';
+@import './common.blocks/fonts/montserrat/montserrat.scss';
+
+// Common blocks
+@import './common.blocks/body/body.scss';
+@import './common.blocks/form/form.scss';
+@import './common.blocks/input/input.scss';
+
+// Header
+@import './project.blocks/header-ui/header-ui.scss';
