--- a/src/ui-form-element.pug
+++ b/src/ui-form-element.pug
@@ -1,7 +1,16 @@
 doctype html
 html(lang="ru")
   head
-    include ./head.pug
-    title
+    include ./common.blocks/head/head.pug
+    title ui form element
   body
-    include blocks/ui-header/ui-header.pug
+    include ./project.blocks/header-ui/header-ui.pug
+    
+    main
+      section
+        div
+          label(for="email") textfield
+          span.condition default
+        input(type="text" id="email" placeholder="Email")
+      section
+      section
