--- a/src/common.blocks/form/form.scss
+++ b/src/common.blocks/form/form.scss
@@ -6,3 +6,9 @@
   border-radius: 4px;
   box-shadow: 0 0 0 25px;
 }
+
+.form__input-label {
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
