--- a/src/common.blocks/input/input.scss
+++ b/src/common.blocks/input/input.scss
@@ -6,8 +6,10 @@
   font: normal 14px/24px Montserrat, Serif;
   border: 1px solid $dark_shade_025;
   border-radius: 4px;
-    &:hover, &:active {
+  color: $dark_shade_050;
+    &:hover, &:active, &:focus {
     border-color: $dark_shade_050;
+    color: $dark_shade_075;
   }
   &_size-m {
     width: 266px;
