изменение структуры проекта

--- a/src/blocks/dropdown-input/dropdown-input.pug
+++ b/src/blocks/dropdown-input/dropdown-input.pug
@@ -1,4 +1,4 @@
-include ./dropdown__list/dropdown__list.pug
+include dropdown__list/dropdown__list.pug
 
 mixin dropdown-input(listitem, button)
   div.dropdown-field
