--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -1,12 +1,12 @@
 doctype html
 html(lang="ru")
   head
-    include ../common.blocks/head/head.pug
+    include ../blocks/head/head.pug
     title ui form element
   body.page
-    include ../project.blocks/ui.page/header-ui/header-ui.pug
-    include ../common.blocks/input/input.pug
-    include ../project.blocks/dropdown-input/dropdown-input.pug
+    include ../blocks/ui-kit/ui-kit__header/ui-kit__header.pug
+    include ../blocks/input/input.pug
+    include ../blocks/dropdown-input/dropdown-input.pug
     main.main-ui
       section.section-vertical
         div.ui-section-inner_m
