--- a/src/blocks/dropdown-input/dropdown__list/dropdown__list.pug
+++ b/src/blocks/dropdown-input/dropdown__list/dropdown__list.pug
@@ -1,4 +1,4 @@
-include ../../../common.blocks/input/input.pug
+include ../../input/input.pug
 mixin dropdown-list(item, button)
   div.dropdown__list
     each label, name in item
