--- a/src/blocks/dropdown-input/dropdown-input.scss
+++ b/src/blocks/dropdown-input/dropdown-input.scss
@@ -1,8 +1,8 @@
-.dropdown-field {
+.dropdown-input {
   position: relative;
 }
 
-.dropdown-input {
+.dropdown-input__ {
   @extend .input;
   padding-right: 44px;
   color: $dark_shade_075;
