--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,8 @@ $dark_shade_025: rgba(31, 32, 65, 0.25);
 $dark_shade_005: rgba(31, 32, 65, 0.05);
 $purple: #bc9cff;
 $green: #6fcf97;
+$font-family-main: 'Montserrat';
+$font-family-second: 'Quicksand';
 
 // Fonts
 @import './blocks/fonts/quicksand/quicksand.scss';
