--- a/src/blocks/input/__label/input__label.scss
+++ b/src/blocks/input/__label/input__label.scss
@@ -1,5 +1,6 @@
-.form__input-label {
+.input__label {
   font-size: 12px;
   font-weight: bold;
   text-transform: uppercase;
+  color: $dark_shade_100;
 }
