--- a/src/style.scss
+++ b/src/style.scss
@@ -19,6 +19,7 @@ $font-family-second: 'Quicksand';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
+@import './blocks/expand-triger/expand-triger.scss';
 
 
 
