подгонял pixel-perfect

--- a/src/blocks/dropdown-input/__button-block/dropdown-input__button-block.scss
+++ b/src/blocks/dropdown-input/__button-block/dropdown-input__button-block.scss
@@ -1,7 +1,7 @@
 .dropdown-input__button-block {
   display: flex;
   justify-content: space-between;
-  padding: 10px 0;
+  margin: 20px 0 10px;
 }
 
 .dropdown-input__button-block .dropdown-input__button:first-child {
