--- a/src/blocks/dropdown-input/__button/dropdown-input__button.scss
+++ b/src/blocks/dropdown-input/__button/dropdown-input__button.scss
@@ -4,6 +4,7 @@
   font-weight: bold;
   text-transform: uppercase;
   color: $purple;
+  letter-spacing: 0.03em;
   background: transparent;
   border: none;
 }
