--- a/src/blocks/dropdown-input/dropdown-input.pug
+++ b/src/blocks/dropdown-input/dropdown-input.pug
@@ -13,7 +13,7 @@ mixin dropdown-input(label, listitem, button, trigerclass, labelText)
 
 
 //- +dropdown-input(
-//-   "field name",
+//-   "field titel,
 //-   {
 //-     adult: "взрослые",
 //-     child: "дети",
