--- a/src/style.scss
+++ b/src/style.scss
@@ -16,6 +16,7 @@ $font-family-second: 'Quicksand';
 @import './blocks/page/page.scss';
 @import './blocks/form/form.scss';
 @import './blocks/input/input.scss';
+@import './blocks/checkbox/checkbox.scss';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
