--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -7,6 +7,7 @@ html(lang="ru")
     include ../blocks/ui-kit/__header/ui-kit__header.pug
     include ../blocks/input/input.pug
     include ../blocks/dropdown-input/dropdown-input.pug
+    include ../blocks/checkbox/checkbox.pug
     main.ui-kit
       section.ui-kit__section-vertical
         div.ui-kit__section-inner_m 
@@ -51,6 +52,48 @@ html(lang="ru")
             'Сколько гостей'
           )
       section.ui-kit__section-vertical
+        div.ui-kit__section-inner_m 
+          +checkbox(
+            {
+              name: "cbbox",
+              value: "smoke",
+              id: "opt-smoke",
+              class: "",
+              checked: 0,
+            },
+            {
+            txt: "Можно курить",
+            class: ""
+            }
+          )
+        div.ui-kit__section-inner_m 
+          +checkbox(
+            {
+              name: "cbbox",
+              value: "pet",
+              id: "opt-pet",
+              class: "",
+              checked: 1,
+            },
+            {
+            txt: "Можно с питомцами",
+            class: ""
+            }
+          )
+        div.ui-kit__section-inner_m 
+          +checkbox(
+            {
+              name: "cbbox",
+              value: "guest",
+              id: "opt-guest",
+              class: "",
+              checked: 1,
+            },
+            {
+            txt: "Можно пригласить гостей (до 10 человек)",
+            class: ""
+            }
+          )
       section.ui-kit__section-vertical
 
       section.ui-kit__section-vertical
