--- a/src/blocks/checkbox/__label/checkbox__label.scss
+++ b/src/blocks/checkbox/__label/checkbox__label.scss
@@ -14,6 +14,7 @@
   height: 18px;
   border: 1px solid $dark_shade_025;
   border-radius: 4px;
+  z-index: 10;
 }
 
 .checkbox:checked ~ .checkbox__label:before {
