--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,8 @@ $font-family-second: 'Quicksand';
 @import './blocks/form/form.scss';
 @import './blocks/input/input.scss';
 @import './blocks/checkbox/checkbox.scss';
+@import './blocks/radiobutton/radiobutton.scss';
+@import './blocks/toggle/toggle.scss';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
