добавлен like button

--- a/src/blocks/toggle/__label/toggle__label.scss
+++ b/src/blocks/toggle/__label/toggle__label.scss
@@ -36,5 +36,5 @@
 
 .toggle:checked + .toggle__label:after {
   left: 25px;
-  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);;
+  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 }
