--- a/src/style.scss
+++ b/src/style.scss
@@ -23,6 +23,7 @@ $font-family-second: 'Quicksand';
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
 @import './blocks/expand-triger/expand-triger.scss';
+@import './blocks/like-button/like-button.scss';
 
 
 
