--- a/src/blocks/ui-kit/ui-kit.scss
+++ b/src/blocks/ui-kit/ui-kit.scss
@@ -3,6 +3,7 @@
 @import '../../../src/blocks/ui-kit/__input-active/ui-kit__input-active.scss';
 @import '../../../src/blocks/ui-kit/__element-condition/ui-kit__element-condition.scss';
 @import '../../../src/blocks/ui-kit/__section-inner/_m/ui-kit__section-inner_m.scss';
+@import './__rate-line/ui-kit__rate-line.scss';
 
 .ui-kit {
   display: flex;
