--- a/src/style.scss
+++ b/src/style.scss
@@ -24,7 +24,7 @@ $font-family-second: 'Quicksand';
 @import './blocks/dropdown-input/dropdown-input.scss';
 @import './blocks/expand-triger/expand-triger.scss';
 @import './blocks/like-button/like-button.scss';
-
+@import './blocks/rate-button/rate-button.scss';
 
 
 // UI Kit
