--- a/src/blocks/fonts/montserrat/montserrat.scss
+++ b/src/blocks/fonts/montserrat/montserrat.scss
@@ -7,3 +7,13 @@
 	font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+	font-family: 'Montserrat';
+  src:local('Montserrat'),
+      url('../src/blocks/fonts/montserrat/Montserrat-Bold.woff') format('woff'),
+      url('../src/blocks/fonts/montserrat/Montserrat-Bold.ttf') format('truetype'),
+      url('../src/blocks/fonts/montserrat/Montserrat-Bold.svg') format('svg');
+	font-weight: bold;
+  font-style: normal;
+}
