переименованы переменные в scss

--- a/src/blocks/dropdown-input/__item-count/dropdown-input__item-count.scss
+++ b/src/blocks/dropdown-input/__item-count/dropdown-input__item-count.scss
@@ -1,7 +1,7 @@
 .dropdown-input__item-count {
   width: 30px;
   height: 30px;
-  color: $dark_shade_100;
+  color: $title-color;
   font-weight: bold;
   text-align: center;
   border: none;
