--- a/src/blocks/dropdown-input/dropdown-input.scss
+++ b/src/blocks/dropdown-input/dropdown-input.scss
@@ -3,7 +3,7 @@
   height: auto;
   position: relative;
   border-radius: 4px 4px 0 0;
-  color: $dark_shade_075;
+  color: $text-color;
 }
 
 @import './__item-list/dropdown-input__item-list.scss';
