--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -1,6 +1,6 @@
 .page {
   margin: 0;
   padding: 0;
-  font: normal 14px/24px $font-family-main, sans-Serif;
+  font: normal 14px/24px $font-family-text, sans-Serif;
   background: white;
 }
