--- a/src/blocks/ui-kit/__input-active/ui-kit__input-active.scss
+++ b/src/blocks/ui-kit/__input-active/ui-kit__input-active.scss
@@ -1,4 +1,4 @@
 .ui-kit__input-active {
-  border-color: $dark_shade_050;
-  color: $dark_shade_075;
+  border-color: $dark_shade_50;
+  color: $text-color;
 }
