--- a/src/blocks/checkbox/__label/checkbox__label.scss
+++ b/src/blocks/checkbox/__label/checkbox__label.scss
@@ -12,11 +12,11 @@
   left: 0;
   width: 18px;
   height: 18px;
-  border: 1px solid $dark_shade_025;
+  border: 1px solid $dark_shade_25;
   border-radius: 4px;
   z-index: 10;
 }
 
 .checkbox:checked ~ .checkbox__label:before {
-  border-color: $purple;
+  border-color: $main-color;
 }
