--- a/src/blocks/dropdown-input/__button/dropdown-input__button.scss
+++ b/src/blocks/dropdown-input/__button/dropdown-input__button.scss
@@ -3,7 +3,7 @@
   font-size: 12px;
   font-weight: bold;
   text-transform: uppercase;
-  color: $purple;
+  color: $main-color;
   letter-spacing: 0.03em;
   background: transparent;
   border: none;
