--- a/src/blocks/fonts/quicksand/quicksand.scss
+++ b/src/blocks/fonts/quicksand/quicksand.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Quicksand';
-  src:local('Quicksand')
+  src:
       url('../src/blocks/fonts/quicksand/Quicksand-Regular.woff') format('woff'),
       url('../src/blocks/fonts/quicksand/Quicksand-Regular.ttf'), format('truetype'),
       url('../src/blocks/fonts/quicksand/Quicksand-Regular.svg'), format('svg');
