--- a/src/blocks/toggle/__label/toggle__label.scss
+++ b/src/blocks/toggle/__label/toggle__label.scss
@@ -18,7 +18,7 @@
   height: 20px;
   top: calc(50% - 10px);
   left: 0;
-  border: 1px solid $dark_shade_025;
+  border: 1px solid $dark_shade_25;
 }
 
 .toggle__label:after {
@@ -27,11 +27,11 @@
   height: 12px;
   top: calc(50% - 6px);
   left: 4px;
-  background: $dark_shade_025;
+  background: $dark_shade_25;
 }
 
 .toggle:checked + .toggle__label:before {
-  border-color: $purple;
+  border-color: $main-color;
 }
 
 .toggle:checked + .toggle__label:after {
