--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,14 @@
-$dark_shade_100: rgba(31, 32, 65, 1);
-$dark_shade_075: rgba(31, 32, 65, 0.75);
-$dark_shade_050: rgba(31, 32, 65, 0.5);
-$dark_shade_025: rgba(31, 32, 65, 0.25);
-$dark_shade_005: rgba(31, 32, 65, 0.05);
-$purple: #bc9cff;
-$green: #6fcf97;
-$font-family-main: 'Montserrat';
-$font-family-second: 'Quicksand';
+$title-color: rgba(31, 32, 65, 1);
+$text-color: rgba(31, 32, 65, 0.75);
+$dark_shade_50: rgba(31, 32, 65, 0.5);
+$dark_shade_25: rgba(31, 32, 65, 0.25);
+$dark_shade_05: rgba(31, 32, 65, 0.05);
+
+$main-color: #bc9cff;
+$second-color: #6fcf97;
+
+$font-family-text: 'Montserrat';
+$font-family-title: 'Quicksand';
 
 // Fonts
 @import './blocks/fonts/quicksand/quicksand.scss';
@@ -19,6 +21,7 @@ $font-family-second: 'Quicksand';
 @import './blocks/checkbox/checkbox.scss';
 @import './blocks/radiobutton/radiobutton.scss';
 @import './blocks/toggle/toggle.scss';
+@import './blocks/title/title.scss';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
