Свёрстана страница Color & Type

--- a/src/blocks/dropdown-input/__item/dropdown-input__item.scss
+++ b/src/blocks/dropdown-input/__item/dropdown-input__item.scss
@@ -1,5 +1,5 @@
 .dropdown-input__item{
-  @extend .input__label;
+  @extend .label-cta;
   display: flex;
   justify-content: space-between;
   align-items: center;
