--- a/src/blocks/input/input.pug
+++ b/src/blocks/input/input.pug
@@ -18,7 +18,7 @@ mixin input(options)
 //-     form:"",
 //-     id: "",
 //-     txtlabel: "",
-//-     classlabel: "input__label",
+//-     classlabel: "label-cta",
 //-     classinput: "input",
 //-     placeholder: "",
 //-   }
