--- a/src/blocks/title/title.scss
+++ b/src/blocks/title/title.scss
@@ -1,4 +1,4 @@
 .title {
-  font: bold 24px/30px $font-family-title;
+  font: bold 24px/30px $font-family-title, sans-Serif;
   color: $title-color;
 }
