--- a/src/blocks/ui-kit/ui-kit.scss
+++ b/src/blocks/ui-kit/ui-kit.scss
@@ -4,6 +4,8 @@
 @import '../../../src/blocks/ui-kit/__element-condition/ui-kit__element-condition.scss';
 @import '../../../src/blocks/ui-kit/__section-inner/_m/ui-kit__section-inner_m.scss';
 @import './__rate-line/ui-kit__rate-line.scss';
+@import './__type/ui-kit__type.scss';
+@import './__color/ui-kit__color.scss';
 
 .ui-kit {
   display: flex;
