--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -23,7 +23,7 @@ html(lang="ru")
               form:"",
               id: "email",
               txtlabel: "text field",
-              classlabel: "input__label",
+              classlabel: "label-cta",
               classinput: "input",
               placeholder: "Email",
             }
@@ -37,7 +37,7 @@ html(lang="ru")
               form:"",
               id: "active-field",
               txtlabel: "text field",
-              classlabel: "input__label",
+              classlabel: "label-cta",
               classinput: "input ui-kit__input-active",
               placeholder: "This is pretty awesome",
             }
