--- a/src/style.scss
+++ b/src/style.scss
@@ -22,6 +22,8 @@ $font-family-title: 'Quicksand';
 @import './blocks/radiobutton/radiobutton.scss';
 @import './blocks/toggle/toggle.scss';
 @import './blocks/title/title.scss';
+@import './blocks/sub-title/sub-title.scss';
+@import './blocks/label-cta/label-cta.scss';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
