--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/expand-triger/expand-triger.scss';
 @import './blocks/like-button/like-button.scss';
 @import './blocks/rate-button/rate-button.scss';
+@import './blocks/range-slider/range-slider.scss';
 
 
 // UI Kit
