стили для кнопок

--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -163,6 +163,22 @@ html(lang="ru")
       section.ui-kit__section-vertical
         .ui-kit__section-inner_m
           +range-slider('form', 'range-slider')
+        .ui-kit__section-inner_m
+          .label-cta buttons
+          span(style="height:15px; display:block;")
+          button(type="button" class="button button_fill") click me
+          span(style="width:30px; display:inline-block;")
+          button(type="button" class="button button_fill") click me
+          span(style="height:30px; display:block;")
+          button(type="button" class="button button_border") click me
+          span(style="width:30px; display:inline-block;")
+          button(type="button" class="button button_border") click me
+          span(style="height:30px; display:block;")
+          button(type="button" class="button button_lite") click me
+          span(style="width:30px; display:inline-block;")
+          button(type="button" class="button button_lite button_lite-gray") click me
+          span(style="width:30px; display:inline-block;")
+          button(type="button" class="button button_fill button_pointer") перейти к оплате
       section.ui-kit__section-vertical
       section.ui-kit__section-vertical
       section.ui-kit__section-vertical
