--- a/src/style.scss
+++ b/src/style.scss
@@ -24,6 +24,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/title/title.scss';
 @import './blocks/sub-title/sub-title.scss';
 @import './blocks/label-cta/label-cta.scss';
+@import './blocks/button/button.scss';
 
 // Project blocks
 @import './blocks/dropdown-input/dropdown-input.scss';
