стили для pagination

--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -179,6 +179,18 @@ html(lang="ru")
           button(type="button" class="button button_lite button_lite-gray") click me
           span(style="width:30px; display:inline-block;")
           button(type="button" class="button button_fill button_pointer") перейти к оплате
+          span(style="width:30px; display:inline-block;")
+        .ui-kit__section-inner_m
+          .label-cta pagination
+          .pagination
+            .pagination-list
+              a.pagination-list__item.pagination-list__item_active 1
+              a.pagination-list__item 2
+              a.pagination-list__item 3
+              a.pagination-list__item ...
+              a.pagination-list__item 15
+              a.pagination-list__item.pagination-list__pointer
+            p.pagination-txt 1 – 12 из 100+ вариантов аренды
       section.ui-kit__section-vertical
       section.ui-kit__section-vertical
       section.ui-kit__section-vertical
