--- a/src/style.scss
+++ b/src/style.scss
@@ -32,6 +32,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/like-button/like-button.scss';
 @import './blocks/rate-button/rate-button.scss';
 @import './blocks/range-slider/range-slider.scss';
+@import './blocks/pagination/pagination.scss';
 
 
 // UI Kit
