--- a/src/pages/ui-form-element.pug
+++ b/src/pages/ui-form-element.pug
@@ -13,6 +13,7 @@ html(lang="ru")
     include ../blocks/like-button/like-button.pug
     include ../blocks/rate-button/rate-button.pug
     include ../blocks/range-slider/range-slider.pug
+    include ../blocks/date-dropdown/date-dropdown.pug
     main.ui-kit
       section.ui-kit__section-vertical
         div.ui-kit__section-inner_m 
@@ -56,6 +57,9 @@ html(lang="ru")
             'check',
             'Сколько гостей'
           )
+        div.ui-kit__section-inner_m 
+          p.label-cta masked text field
+          +input-date('date-range', 'form')
       section.ui-kit__section-vertical
         div.ui-kit__section-inner_m 
           +checkbox(
