--- a/src/style.scss
+++ b/src/style.scss
@@ -33,6 +33,7 @@ $font-family-title: 'Quicksand';
 @import './blocks/rate-button/rate-button.scss';
 @import './blocks/range-slider/range-slider.scss';
 @import './blocks/pagination/pagination.scss';
+@import './blocks/date-dropdown/date-dropdown.scss';
 
 
 // UI Kit
